# M5Paper_PaperS3_eBookReader

./: .gitignore  BOOT_OPTIMIZATION_PLAN.md  CMakeLists.txt  LICENSE  README.md  build.ps1  build_log.txt  builds3.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.old  serial.log.example.txt
.github/: copilot-instructions.md
main/: CMakeLists.txt  Kconfig.projbuild  book_index.cpp  book_index.h  composer_ui.cpp  composer_ui.h  device_hal.cpp  device_hal.h  dns_server.cpp  dns_server.h  drawing_app.cpp  drawing_app.h  epub_loader.cpp  epub_loader.h  game_manager.cpp  game_manager.h  gesture_detector.cpp  gesture_detector.h  gui.cpp  gui.h  html_utils.cpp  html_utils.h  idf_component.yml  image_handler.cpp  image_handler.h  index.html  main.cpp  math_renderer.cpp  math_renderer.h  midi_io.cpp  midi_io.h  project_io.cpp  project_io.h  sequencer_engine.cpp  sequencer_engine.h  task_coordinator.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h  (+2 more)
spiffs_image/: Romeo and Juliet - William Shakespeare.epub  index.html
spiffs_image/fonts/: Arabic-Merged.vlw  Hebrew-Merged.vlw  NotoSansHebrew-Regular.vlw  Roboto-Regular.vlw  math.vlw
tools/: generate_vlw_fonts.py  prepare_epubs.py  rename_books.py  resize_icons.py  strip_images_epub.py  test_spiffs_gen.py
